@@ -126,9 +126,8 @@ if ( $wgDBprefix ) {
 
 # If session.auto_start is there, we can't touch session name
 #
-if (!ini_get('session.auto_start')) {
-	session_name( $wgCookiePrefix . '_session' );
-}
+if( !ini_get( 'session.auto_start' ) )
+	session_name( $wgSessionName ? $wgSessionName : $wgCookiePrefix . '_session' );
 
 if( !$wgCommandLineMode && ( isset( $_COOKIE[session_name()] ) || isset( $_COOKIE[$wgCookiePrefix.'Token'] ) ) ) {
 	wfIncrStats( 'request_with_session' );
